--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #fad4cd;
 }
 /*===================NAVBAR==============================*/
 
@@ -12,7 +18,7 @@
   justify-content: space-between;
   padding: 10px;
   height: 150px;
-  background-color: white;
+  background-color: #faefed;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -37,20 +43,26 @@ nav ul a {
 }
 
 nav ul a:hover {
-  color: #ffc3c3;
+  color: black;
+  max-width: 300px;
+  padding: 12px 24px;
+  background-color: #fad4d4;
 }
 
-nav button {
+.active-link {
   font-family: "Roboto", sans-serif;
   border: none;
-  font-weight: 400;
+  font-weight: 600;
+  font-size: 0.95em;
   max-width: 300px;
   padding: 12px 24px;
   background-color: #ffc3c3;
-  color: #fff;
-  font-weight: bold;
   text-decoration: none;
-  transition: background-color 0.3s ease;
+}
+
+.active-link:hover {
+  color: black;
+  background-color: #ffc3c3;
 }
 
 /*===================HERO============================*/
@@ -60,12 +72,10 @@ nav button {
   height: 100vh; /* Adjust to fit your content */
   width: 100%;
   display: flex;
-  font-family: "Cormorant", serif;
-  font-weight: 700;
+  font-family: "Playfair Display", serif;
   font-size: 1.5rem;
   justify-content: flex-start;
   text-align: center;
-  margin-bottom: 50px;
 }
 
 .hero-content {
@@ -87,6 +97,7 @@ nav button {
 .hero p {
   font-size: 1.5rem;
   margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
 }
 
 .hero .btn {
@@ -114,6 +125,20 @@ nav button {
   height: 100vh;
 }
 
+/*===================CAROUSEL===============*/
+.carousel-section {
+  font-family: "Playfair Display", serif;
+  text-align: center;
+  padding: 40px;
+  border-bottom: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.carousel-section h1 {
+  font-size: 1.5rem;
+  border-bottom: 20px;
+}
+
 /*============CONTACTO===========================*/
 
 .contact-info {
@@ -139,14 +164,24 @@ nav button {
 }
 
 .contact-content h1 {
-  font-size: 3.5rem;
-  font-family: "Cormorant", serif;
+  background-color: #fad4cd;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+  border: 2px solid white;
+  margin-bottom: 10px;
+  border-radius: 20px;
+  padding: 12px 24px;
+  font-size: 2.5rem;
+  font-family: "Playfair Display", serif;
 }
 
 .social-icons {
   display: flex;
+  background-color: #fad4cd;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+  border: 2px solid white;
+  border-radius: 20px;
+  padding: 12px 24px;
   flex-direction: column;
-  padding: 10px;
   margin-top: 20px;
   align-items: flex-start;
 }
@@ -166,4 +201,8 @@ nav button {
   color: black;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+}
+
+.social-icons a:hover {
+  font-weight: bold;
 }
