--- a/src/tratamientos.css
+++ b/src/tratamientos.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+
+/* Overlay Container Styles */
 .overlay-container {
   position: relative;
   width: 100%;
@@ -5,6 +9,7 @@
   background-size: cover;
   background-position: center;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .overlay-container::after {
@@ -15,9 +20,10 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5); /* Dark see-through overlay */
-  transition: background 3s ease;
+  transition: background 0.3s ease;
   z-index: 1; /* Ensure it covers the background image */
 }
+
 .overlay-container:hover {
   transform: scale(1.05); /* Slightly enlarge the container */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow effect */
@@ -29,11 +35,113 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
+  font-family: "Playfair Display", serif;
+  text-shadow: 2px 2px 2px black;
+  font-size: 1.6em;
+  font-weight: 700;
   z-index: 2; /* Ensure the text is above the overlay */
   text-align: center;
 }
 
-.overlay-content h1 {
-  margin: 0;
-  font-size: 2rem; /* Adjust as needed */
+/* Styles for Expanding Content */
+.tratamientos-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.tratamiento-item {
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  transition: max-height 0.5s ease, box-shadow 0.3s ease;
+}
+
+.tratamiento-item.expanded {
+  max-height: 1500px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow when expanded */
+}
+
+.tratamiento-content {
+  transition: opacity 0.5s ease, max-height 0.5s ease;
+  overflow: hidden;
+  max-height: 0; /* Initially hidden */
+  opacity: 0;
+}
+
+.tratamiento-item.expanded .tratamiento-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-height: 1500px; /* Adjust based on content size */
+  opacity: 1;
+  padding: 40px;
+  background-color: #fad4cd;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3);
+  border: 2px solid white;
+  padding: 12px 24px;
+  width: 100%;
+  text-align: center;
+}
+.tratamiento-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.tratamiento-content h1 {
+  margin-bottom: 25px;
+  font-family: "Playfair Display", serif;
+  color: #fff;
+  text-shadow: 2px 2px 2px black;
+}
+
+.tratamientos-description {
+  margin-bottom: 25px;
+  font-size: 1.2em;
+  font-weight: 600;
+}
+
+.tratamientos-list {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 1.3em;
+  font-weight: 500;
+  width: 60%;
+  margin: 0 auto;
+}
+
+.tratamientos-list li {
+  margin-bottom: 10px;
+}
+.turno-button {
+  display: block;
+  margin: 0 auto;
+  font-family: "Roboto", sans-serif;
+  border-radius: 25px;
+  border: none;
+  font-size: 0.9em;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  padding: 12px 24px;
+  background-color: #858484;
+  color: #fff;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.turno-button a {
+  text-decoration: none;
+  font-weight: 600;
+  color: white;
+  font-size: 0.9em;
+}
+.turno-button:hover {
+  background-color: rgb(65, 63, 63);
 }
