--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,11 @@ body {
   background-color: #fad4cd;
   width: 100%;
 }
+
+.placeholder {
+  display: none;
+  height: 150px;
+}
 /*===================NAVBAR==============================*/
 
 .navbar {
@@ -105,6 +110,14 @@ nav ul a:hover {
 
 /* Responsive Styles */
 @media (max-width: 768px) {
+  .placeholder {
+    display: block;
+  }
+  .navbar {
+    position: fixed;
+    width: 100%;
+    z-index: 2000;
+  }
   nav ul {
     display: none;
     flex-direction: column;
